--- a/templates/documents/_form.html.twig
+++ b/templates/documents/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
-    {{ form_widget(form.file) }}
+    {{ form_widget(form.files) }}
     <br><button class="btn btn-success text-presentation m-3">{{ button_label|default('Ajouter les documents') }}</button>
 {{ form_end(form) }}
