--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -6,7 +6,11 @@
     <main class="article p-3">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
-                <h1>Photos ou PDF</h1>
+                <h1>Photos ou PDF - page du 
+                        {{ trans_day_hash[article.jour|date('l')] }}
+                        {{ article.jour ? article.jour|date('j') : '' }}
+                        {{ trans_month_hash[article.jour|date('F')] }}
+                        {{ article.jour ? article.jour|date('Y') : '' }}</h1>
                 <p class="text-presentation">Choisissez un ou plusieurs documents (maintenir appuyé sur CTRL pour sélectionner plusieurs fichiers)</p>
 
                     {{ include('documents/_form.html.twig') }}
