Display picture or download PDF on document page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -257,6 +257,14 @@ body {
     }
 }
 
+/* DOCUMENT */
+
+.big-image {
+    max-width: 80%;
+    height: auto;
+}
+
+
 /* FORMULAIRES */
 
 .contenu {
