--- a/templates/documents/_delete_form.html.twig
+++ b/templates/documents/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('documents_delete', {'id': document.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('documents_delete', {'id': document.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce fichier ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ document.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger mt-2">Supprimer</button>
 </form>
