--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -10,7 +10,9 @@
             <tr>
                 <th>Id</th>
                 <th>File</th>
+                <th>Article</th>
                 <th>Date</th>
+                <th>Poster</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -19,7 +21,9 @@
             <tr>
                 <td>{{ document.id }}</td>
                 <td>{{ document.file }}</td>
+                <td>{{ document.article.id }}</td>
                 <td>{{ document.date ? document.date|date('Y-m-d H:i:s T') : '' }}</td>
+                <td>{{ document.poster.id }}</td>
                 <td>
                     <a href="{{ path('documents_show', {'id': document.id}) }}">show</a>
                     <a href="{{ path('documents_edit', {'id': document.id}) }}">edit</a>
@@ -33,5 +37,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('documents_new') }}">Create new</a>
 {% endblock %}
