--- a/templates/documents/show.html.twig
+++ b/templates/documents/show.html.twig
@@ -1,30 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Documents{% endblock %}
+{% block title %}Détail d'un document{% endblock %}
 
 {% block body %}
-    <h1>Documents</h1>
+        <div class="text-center pt-4">
+        {% set article = document.article %}
+        <a href="{{ path('articles_show', {'id': document.article.id }) }}" class="btn btn-success">
+            {{ trans_day_hash[article.jour|date('l')] }}
+            {{ article.jour ? article.jour|date('j') : '' }}
+            {{ trans_month_hash[article.jour|date('F')] }}
+            {{ article.jour ? article.jour|date('Y') : '' }}
+        </a>
+    </div>
+    <div class="text-center pt-4">
+        <img src="{{ asset('documents/' ~ document.file) }}" alt="Document du journal" class="big-image" />
+    </div>
+    <div class="text-center pt-4">
+        Posté par {{document.poster.firstname }} le {{ document.date ? document.date|date('d/m/Y') : '' }}</td>
+    </div>
+    <div class="text-center pt-4">
+        <a href="{{ path('articles_show', {'id': document.article.id }) }}" class="btn btn-success">
+            {{ trans_day_hash[article.jour|date('l')] }}
+            {{ article.jour ? article.jour|date('j') : '' }}
+            {{ trans_month_hash[article.jour|date('F')] }}
+            {{ article.jour ? article.jour|date('Y') : '' }}
+        </a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ document.id }}</td>
-            </tr>
-            <tr>
-                <th>File</th>
-                <td>{{ document.file }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ document.date ? document.date|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('documents_index') }}">back to list</a>
-
-    <a href="{{ path('documents_edit', {'id': document.id}) }}">edit</a>
-
-    {{ include('documents/_delete_form.html.twig') }}
+        {% if document.poster == app.user %}
+            {{ include('documents/_delete_form.html.twig') }}
+        {% endif %}
+    </div>
 {% endblock %}
