--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -32,7 +32,7 @@
                     <p class="text-article pt-3 pr-5 pl-5 pb-5">
                         {{ article.contenu |nl2br }}
                     </p>
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center mb-5">
                         {% for document in article.documents %}
                                 {% set pdf = false %}
                                 {% set extensions = document.file | split('.', 2)%}
