Display doc number on index page

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -37,7 +37,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Statistiques</h5>
                         <p>{{ totalJournaux }} journaux<br>
-                        {{ totalArticles }} pages<br>
+                        {{ totalArticles }} pages - {{ totalDocs }} docs<br>
                         {{ totalContribs }} contributeurs</p>
                     </div>
                 </div>
@@ -62,9 +62,17 @@
 
                         {% for contrib in contribs %}
                             {% if contrib.ajouts|length > 1 %}
-                                {{ contrib.firstname }} : {{ contrib.ajouts|length }} pages<br>
+                                {{ contrib.firstname }} : {{ contrib.ajouts|length }} pages
                             {% elseif contrib.ajouts|length == 1 %}
-                                {{ contrib.firstname }} : {{ contrib.ajouts|length }} page<br>
+                                {{ contrib.firstname }} : {{ contrib.ajouts|length }} page
+                            {% endif %}
+                            {% if contrib.documents|length > 1 %}
+                                 - {{ contrib.documents|length }} docs<br>
+                            {% elseif contrib.documents|length == 1 %}
+                                 - {{ contrib.documents|length }} doc<br>
+                            {% endif %}
+                            {% if contrib.ajouts|length > 1 and contrib.documents|length == 0 %}
+                                <br>
                             {% endif %}
                         {% endfor %}
                     </div>
