Display thunbails for document index, and rename documents in photos on document_new

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -264,6 +264,13 @@ body {
     height: auto;
 }
 
+.miniature {
+    margin: 3px;
+    height: 200px;
+    width: auto;
+    border: solid 2px black;
+}
+
 
 /* FORMULAIRES */
 
