--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -14,6 +14,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
+        
             <div class="col-sm-3 m-3">
                 <div class="card text-center">
                     <div class="card-body">
@@ -23,6 +24,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-sm-3 m-3">
                 <div class="card text-center">
                     <div class="card-body">
@@ -32,6 +34,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-sm-3 m-3">
                 <div class="card text-center">
                     <div class="card-body">
@@ -42,19 +45,35 @@
                     </div>
                 </div>
             </div>
+
             {% if app.user %}
-            {% if app.user.roles[0] == "ROLE_LECTOR" or app.user.roles[0] == "ROLE_ADMIN" %}
-                <div class="col-sm-3 m-3">
-                    <div class="card text-center">
-                        <div class="card-body">
-                            <h5 class="card-title">Trouver du contenu</h5>
-                            <p class="card-text">Recherche sur toutes les pages</p>
-                            <a href="{{ path('search') }}" class="btn btn-dark">Chercher</a>
+                {% if app.user.roles[0] == "ROLE_LECTOR" or app.user.roles[0] == "ROLE_ADMIN" %}
+                    <div class="col-sm-3 m-3">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title">Trouver du contenu</h5>
+                                <p class="card-text">Recherche sur toutes les pages</p>
+                                <a href="{{ path('search') }}" class="btn btn-dark">Chercher</a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endif %}
+
+            {% if app.user %}
+                {% if app.user.roles[0] == "ROLE_LECTOR" or app.user.roles[0] == "ROLE_ADMIN" %}
+                    <div class="col-sm-3 m-3">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title">Ajouter une page au journal</h5>
+                                <p class="card-text">Une page à la fois...</p>
+                                <a href="{{ path('articles_new') }}" class="btn btn-success">Ajouter</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
             {% endif %}
+
             <div class="col-sm-3 m-3">
                 <div class="card text-center">
                     <div class="card-body">
@@ -78,19 +97,21 @@
                     </div>
                 </div>
             </div>
+            
             {% if app.user %}
                 {% if app.user.roles[0] == "ROLE_LECTOR" or app.user.roles[0] == "ROLE_ADMIN" %}
                     <div class="col-sm-3 m-3">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title">Ajouter une page au journal</h5>
-                                <p class="card-text">Une page à la fois...</p>
-                                <a href="{{ path('articles_new') }}" class="btn btn-success">Ajouter</a>
+                                <h5 class="card-title">Parcourir les photos</h5>
+                                <p class="card-text">Feuilleter le journal autrement</p>
+                                <a href="{{ path('documents_index') }}" class="btn btn-warning">En images</a>
                             </div>
                         </div>
                     </div>
                 {% endif %}
             {% endif %}
+
         </div>
     </main>
 {% endblock %}
