Correction for lastname in admin mail on user creation

--- a/templates/emails/inscription.html.twig
+++ b/templates/emails/inscription.html.twig
@@ -4,7 +4,7 @@
     Un utilisateur a demandé de s'inscrire au Journal de Maman.
     Il s'agit de :</p>
 <ul>
-    <li>{{ user.firstname }} {{ user.name }}</li>
+    <li>{{ user.firstname }} {{ user.lastname }}</li>
     <li>Mail : {{ user.email }}</li>
     <li>Lien : {{ user.link }}</li>
 </ul>
