--- a/templates/documents/show.html.twig
+++ b/templates/documents/show.html.twig
@@ -26,7 +26,7 @@
             {{ article.jour ? article.jour|date('Y') : '' }}
         </a>
 
-        {% if document.poster == app.user %}
+        {% if document.poster == app.user or is_granted('ROLE_ADMIN') %}
             {{ include('documents/_delete_form.html.twig') }}
         {% endif %}
     </div>
