Add documents to last page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -271,6 +271,13 @@ body {
     border: solid 2px black;
 }
 
+.small-miniature {
+    margin: 3px;
+    height: 100px;
+    width: auto;
+    border: solid 2px black;
+}
+
 
 /* FORMULAIRES */
 
