Correction on index page

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -108,7 +108,7 @@
                         <div class="card text-center">
                             <div class="card-body">
                                 <h5 class="card-title">Dernières nouveautés</h5>
-                                <p class="card-text">Feuilleter le journal autrement</p>
+                                <p class="card-text">En un clin d'oeil</p>
                                 <a href="{{ path('last') }}" class="btn btn-primary">Nouveautés</a>
                             </div>
                         </div>
