--- a/templates/journaux/show.html.twig
+++ b/templates/journaux/show.html.twig
@@ -21,6 +21,12 @@
                         </a>
                     {% endif %}
                 {% endif %}
+                <span class="journal-stat text-center m-2">
+                    <span class="red-number">
+                        {{ journal.articles | length }}
+                    </span>
+                     pages
+                </span>
             </div>
         </div>
 
