Add current date to footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -100,7 +100,7 @@
         {% block footer %}
             <footer class="mt-5 footer">
                 <div class="container text-center">
-                    <div class="text-center">© 2020 -
+                    <div class="text-center">© 2020-{{ "now" | date("Y") }} -
                         <a href="http://www.jejoueenclasse.fr" target="_blank"> Jyaire</a>
                     </div>
                 </div>
